mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-demo-v2
spec:
  selector:
    matchLabels:
      app: mysql-test
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-test
    spec:
      containers:
      - name: mysql-test
        imagePullPolicy: Always
        image: demoburneraccount/ci-testing:mysql
        ports:
        - containerPort: 3306
