php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-demo
spec:
  selector:
    matchLabels:
      app: php-test
  replicas: 2
  template:
    metadata:
      labels:
        app: php-test
    spec:
      containers:
      - name: php-test
        imagePullPolicy: Always
        image: demoburneraccount/ci-testing:php
        ports:
        - containerPort: 8000
