fleet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deployment
  labels:
    app: php-mysql-testing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-mysql-testing
  template:
    metadata:
      labels:
        app: php-mysql-testing
    spec:
      containers:
      - name: php-test
        image: demoburneraccount/ci-testing:php
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql-testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-testing
  template:
    metadata:
      labels:
        app: mysql-testing
    spec:
      containers:
      - name: mysql-test
        image: demoburneraccount/ci-testing:mysql
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql-testing
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql-testing
