mysql-service.yaml
apiVersion: v1
kind: Service
spec:
  selector:
    app: mysql-test
  type: ClusterIP
  ports:
    - name: mysql-service
      port: 3306
      targetPort: 3306
      protocol: TCP
