php-service.yaml
apiVersion: v1
kind: Service
spec:
  selector:
    app: php-test
  type: ClusterIP
  ports:
    - name: php-service
      port: 80
      targetPort: 8000
      protocol: TCP
